[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bettensor"
version = "2.3.1"
description = "Bettensor subnet for sports betting prediction"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Bettensor Team", email = "info@bettensor.com" }
]
dependencies = [
    "aiofiles",
    "aiohappyeyeballs",
    "aiohttp",
    "aiosignal",
    "aiosqlite",
    "annotated-types",
    "anyio",
    "async-property",
    "async-timeout",
    "attrs",
    "azure-core",
    "azure-storage-blob",
    "backoff",
    "base58",
    "bittensor-cli>=9.1.0",
    "bittensor>=9.0.0",
    "bt-decode",
    "certifi",
    "cffi",
    "charset-normalizer",
    "click",
    "colorama",
    "cryptography",
    "cytoolz",
    "decorator",
    "ecdsa",
    "eth-hash",
    "eth-keys",
    "eth-typing",
    "eth-utils",
    "exceptiongroup",
    "fastapi",
    "filelock",
    "frozenlist",
    "fsspec",
    "fuzzywuzzy",
    "gitdb",
    "GitPython",
    "greenlet",
    "h11",
    "huggingface-hub",
    "idna",
    "iniconfig",
    "isodate",
    "Jinja2",
    "joblib",
    "Levenshtein",
    "loguru",
    "markdown-it-py",
    "MarkupSafe",
    "mdurl",
    "more-itertools",
    "mpmath",
    "msgpack",
    "msgpack-numpy-opentensor",
    "multidict",
    "munch",
    "nest-asyncio",
    "netaddr",
    "networkx",
    "numpy",
    "packaging",
    "pandas",
    "password-strength",
    "pluggy",
    "prompt_toolkit",
    "propcache",
    "psycopg2-binary",
    "py",
    "py-bip39-bindings",
    "py-ed25519-zebra-bindings",
    "py-sr25519-bindings",
    "pycparser",
    "pycryptodome",
    "pydantic",
    "pydantic_core",
    "Pygments",
    "PyNaCl",
    "pytest",
    "python-dateutil",
    "python-dotenv",
    "python-Levenshtein",
    "python-statemachine",
    "pytz",
    "PyYAML",
    "RapidFuzz",
    "redis",
    "requests",
    "retry",
    "rich",
    "safetensors",
    "scalecodec",
    "scikit-learn",
    "scipy",
    "shellingham",
    "six",
    "smmap",
    "sniffio",
    "SQLAlchemy",
    "ssdeep",
    "starlette",
    "substrate-interface",
    "sympy",
    "termcolor",
    "threadpoolctl",
    "toml",
    "tomli",
    "toolz",
    "torch>=2.0.0",
    "tqdm",
    "triton",
    "typer",
    "typing_extensions",
    "tzdata",
    "urllib3",
    "uvicorn",
    "wcwidth",
    "websocket-client",
    "websockets",
    "xxhash",
    "yarl",
    "matplotlib>=3.10.1",
    "async-substrate-interface>=1.0.3",
    "seaborn>=0.13.2",
    "ipywidgets>=8.1.5",
]

[project.scripts]
# Add any CLI scripts here

[project.urls]
Source = "https://github.com/bettensor/bettensor"

[tool.hatch.build.targets.wheel]
packages = ["bettensor"] 
