[metadata]
name = bettensor
version = 2.3.4
database_version = 1.0.0
reset_validator_scores = False
force_rebuild_scores = True
author = geardici, oneandahalfcats, qucat
organization = Nickel5
author_email = test@email.com
description = This project implements the Bettensor subnet for Bittensor
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[vesting]
enabled = False
minimum_stake = 0.3
retention_window = 30
retention_target = 0.9
max_multiplier = 1.5
use_background_thread = True
thread_priority = low
query_interval_seconds = 300
transaction_query_interval_seconds = 60
detailed_transaction_tracking = True

[options]
packages = find:
python_requires = >=3.10
install_requires = 
	bittensor>=9.0.0
	torch
	gitpython
	python-dotenv

[options.extras_require]
miner = 
	datetime
	sqlite3
	json
	time
	typing
	uuid
validator = 
	datetime
	sqlite3
	json
	time
	typing
	uuid

